--- a/eclair-node-gui/src/main/resources/gui/main/notificationPane.fxml
+++ b/eclair-node-gui/src/main/resources/gui/main/notificationPane.fxml
@@ -29,7 +29,7 @@
         <URL value="@../commons/globals.css" />
         <URL value="@main.css" />
     </stylesheets>
-    <Label fx:id="titleLabel" styleClass="notification-title" text="Eclair Notification" GridPane.columnIndex="1" />
+    <Label fx:id="titleLabel" styleClass="notification-title" text="Lightning Notification" GridPane.columnIndex="1" />
     <ImageView fx:id="icon" fitWidth="25.0" pickOnBounds="true" preserveRatio="true" GridPane.rowSpan="2">
         <Image url="@../commons/images/eclair-square.png" />
     </ImageView>
