--- a/eclair-node-gui/src/main/resources/gui/modals/about.fxml
+++ b/eclair-node-gui/src/main/resources/gui/modals/about.fxml
@@ -22,7 +22,7 @@
             <children>
                 <TextFlow>
                     <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-strong" text="Eclair v"/>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-strong" text="Lightning v"/>
                         <Text fx:id="version" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="text-strong"
                               text="Unknown"/>
                         <Text strokeType="OUTSIDE" styleClass="text-sm" strokeWidth="0.0" text=" brought to you by "/>
@@ -32,7 +32,7 @@
                 </TextFlow>
                 <TextFlow layoutX="10.0" layoutY="90.0">
                     <children>
-                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Eclair follows "/>
+                        <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Lightning follows "/>
                         <Text onMouseClicked="#openLNRFCPage" strokeType="OUTSIDE" strokeWidth="0.0" styleClass="link"
                               text="the Lightning Network specifications"/>
                         <Text strokeType="OUTSIDE" strokeWidth="0.0" text="."/>
