--- a/eclair-node-gui/src/main/resources/gui/modals/openChannel.fxml
+++ b/eclair-node-gui/src/main/resources/gui/modals/openChannel.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.layout.*?>
 <?import java.lang.String?>
 <?import java.net.URL?>
-<GridPane styleClass="grid" prefWidth="550.0" prefHeight="350.0" xmlns="http://javafx.com/javafx/8"
+<GridPane styleClass="grid" prefWidth="550.0" prefHeight="300.0" xmlns="http://javafx.com/javafx/8"
           xmlns:fx="http://javafx.com/fxml/1">
     <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" maxWidth="180.0" minWidth="10.0" prefWidth="180.0" halignment="RIGHT"/>
@@ -18,7 +18,7 @@
         <RowConstraints vgrow="SOMETIMES"/>
         <RowConstraints vgrow="SOMETIMES" minHeight="30.0" valignment="BOTTOM"/>
         <RowConstraints vgrow="SOMETIMES"/>
-        <RowConstraints vgrow="SOMETIMES"/>
+        <RowConstraints/>
     </rowConstraints>
     <children>
 
@@ -64,14 +64,11 @@
         <TextField fx:id="pushMsatField" prefWidth="313.0" GridPane.columnIndex="1" GridPane.rowIndex="4"/>
         <Label fx:id="pushMsatError" styleClass="text-error, text-error-downward"
                GridPane.columnIndex="1" GridPane.rowIndex="4" GridPane.columnSpan="2"/>
-        <CheckBox fx:id="publicChannel" mnemonicParsing="true" selected="true" styleClass="text-sm"
-                  text="Public Channel"
-                  GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="5"/>
 
         <Button fx:id="button" defaultButton="true" mnemonicParsing="false" onAction="#handleOpen" text="Connect"
-                GridPane.columnIndex="1" GridPane.rowIndex="6" GridPane.valignment="BOTTOM"/>
+                GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="5" GridPane.valignment="BOTTOM"/>
         <Button cancelButton="true" mnemonicParsing="false" onAction="#handleClose" styleClass="cancel" text="Cancel"
-                GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="6"
+                GridPane.columnIndex="2" GridPane.halignment="RIGHT" GridPane.rowIndex="5"
                 GridPane.valignment="BOTTOM"/>
     </children>
     <stylesheets>
